# python-ddd-example

./: pyproject.toml  readme.md
src/ddd/: main.py
src/ddd/application/: customers.py  orders.py
src/ddd/domain/customers/: interfaces.py  models.py  repositories.py  service.py
src/ddd/domain/orders/: interfaces.py  models.py  repositories.py  service.py
src/ddd/infrastructure/: uow.py
src/ddd/infrastructure/adapters/customers/: repository.py
src/ddd/infrastructure/adapters/orders/: repository.py
src/ordering/: main.py
src/ordering/application/: customers.py  orders.py
src/ordering/domain/customers/: interfaces.py  model.py  repository.py  service.py
src/ordering/domain/orders/: interfaces.py  model.py  repository.py  service.py
src/ordering/infrastructure/adapters/customers/: repository.py
src/ordering/infrastructure/adapters/orders/: repository.py  service.py
tests/: test_app.py
tests/domain/: test_order.py
